--- a/urbanstory/pages/components/button.html
+++ b/urbanstory/pages/components/button.html
@@ -26,7 +26,7 @@
 				</tr>
 				<tr>
 					<td>
-						<button class="btn btn-firm-o">Button</button>
+						<button class="btn btn-flat-firm">Button</button>
 					</td>
 					<td>Button</td>
 					<td>Murmur</td>
@@ -80,7 +80,7 @@
 				</tr>
 				<tr>
 					<td>
-						<a class="link-primary">Primary</a>
+						<a class="link">Primary</a>
 					</td>
 					<td>Link</td>
 					<td>Whistle</td>
@@ -89,7 +89,7 @@
 				</tr>
 				<tr>
 					<td>
-						<a href="#!" class="link-secondary">Secondary</a>
+						<a href="#!" class="link is-grey">Secondary</a>
 					</td>
 					<td>Link</td>
 					<td>Whisper</td>
@@ -101,6 +101,15 @@
 	</section>
 	<section>
 		<h4>All Buttons</h4>
+
+		<h6>Button (Default)</h6>
+		<button class="btn btn-large">Button Large</button>
+		<button class="btn">Button Default</button>
+		<button class="btn btn-small">Button Small</button>
+		<pre><code>&lt;button class=&quot;btn btn-large&quot;&gt;Button Large&lt;/button&gt;
+&lt;button class=&quot;btn&quot;&gt;Button Default&lt;/button&gt;
+&lt;button class=&quot;btn btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
+
 		<h6>Button Firm</h6>
 		<button class="btn btn-firm btn-large">Button Large</button>
 		<button class="btn btn-firm">Button Default</button>
@@ -109,13 +118,7 @@
 &lt;button class=&quot;btn btn-firm&quot;&gt;Button Default&lt;/button&gt;
 &lt;button class=&quot;btn btn-firm btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
 
-		<h6>Button Firm Outlined</h6>
-		<button class="btn btn-firm-o btn-large">Button Large</button>
-		<button class="btn btn-firm-o">Button Default</button>
-		<button class="btn btn-firm-o btn-small">Button Small</button>
-		<pre><code>&lt;button class=&quot;btn btn-firm-o btn-large&quot;&gt;Button Large&lt;/button&gt;
-&lt;button class=&quot;btn btn-firm-o&quot;&gt;Button Default&lt;/button&gt;
-&lt;button class=&quot;btn btn-firm-o btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
+		
 
 		<h6>Button Median</h6>
 		<button class="btn btn-median btn-large">Button Large</button>
@@ -156,6 +159,49 @@
 		<pre><code>&lt;button class=&quot;btn btn-disabled btn-large&quot;&gt;Button Large&lt;/button&gt;
 &lt;button class=&quot;btn btn-disabled&quot;&gt;Button Default&lt;/button&gt;
 &lt;button class=&quot;btn btn-disabled btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
+
+		<h6>Button Flat Firm</h6>
+		<button class="btn btn-flat-firm btn-large">Button Large</button>
+		<button class="btn btn-flat-firm">Button Default</button>
+		<button class="btn btn-flat-firm btn-small">Button Small</button>
+		<pre><code>&lt;button class=&quot;btn btn-flat-firm btn-large&quot;&gt;Button Large&lt;/button&gt;
+&lt;button class=&quot;btn btn-flat-firm&quot;&gt;Button Default&lt;/button&gt;
+&lt;button class=&quot;btn btn-flat-firm btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
+		<h6>Button Flat Median</h6>
+		<button class="btn btn-flat-median btn-large">Button Large</button>
+		<button class="btn btn-flat-median">Button Default</button>
+		<button class="btn btn-flat-median btn-small">Button Small</button>
+		<pre><code>&lt;button class=&quot;btn btn-flat-median btn-large&quot;&gt;Button Large&lt;/button&gt;
+&lt;button class=&quot;btn btn-flat-median&quot;&gt;Button Default&lt;/button&gt;
+&lt;button class=&quot;btn btn-flat-median btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
+		<h6>Button Flat Success</h6>
+		<button class="btn btn-flat-success btn-large">Button Large</button>
+		<button class="btn btn-flat-success">Button Default</button>
+		<button class="btn btn-flat-success btn-small">Button Small</button>
+		<pre><code>&lt;button class=&quot;btn btn-flat-success btn-large&quot;&gt;Button Large&lt;/button&gt;
+&lt;button class=&quot;btn btn-flat-success&quot;&gt;Button Default&lt;/button&gt;
+&lt;button class=&quot;btn btn-flat-success btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
+		<h6>Button Flat Danger</h6>
+		<button class="btn btn-flat-danger btn-large">Button Large</button>
+		<button class="btn btn-flat-danger">Button Default</button>
+		<button class="btn btn-flat-danger btn-small">Button Small</button>
+		<pre><code>&lt;button class=&quot;btn btn-flat-danger btn-large&quot;&gt;Button Large&lt;/button&gt;
+&lt;button class=&quot;btn btn-flat-danger&quot;&gt;Button Default&lt;/button&gt;
+&lt;button class=&quot;btn btn-flat-danger btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
+		<h6>Button Flat Prime</h6>
+		<button class="btn btn-flat-prime btn-large">Button Large</button>
+		<button class="btn btn-flat-prime">Button Default</button>
+		<button class="btn btn-flat-prime btn-small">Button Small</button>
+		<pre><code>&lt;button class=&quot;btn btn-flat-prime btn-large&quot;&gt;Button Large&lt;/button&gt;
+&lt;button class=&quot;btn btn-flat-prime&quot;&gt;Button Default&lt;/button&gt;
+&lt;button class=&quot;btn btn-flat-prime btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
+		<h6>Button Flat Grey</h6>
+		<button class="btn btn-flat-grey btn-large">Button Large</button>
+		<button class="btn btn-flat-grey">Button Default</button>
+		<button class="btn btn-flat-grey btn-small">Button Small</button>
+		<pre><code>&lt;button class=&quot;btn btn-flat-grey btn-large&quot;&gt;Button Large&lt;/button&gt;
+&lt;button class=&quot;btn btn-flat-grey&quot;&gt;Button Default&lt;/button&gt;
+&lt;button class=&quot;btn btn-flat-grey btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
 	</section>
 	<section>
 		<h4>Button Variants</h4>
@@ -169,8 +215,8 @@
 	<section>
 		<h4>Links</h4>
 		<ul>
-			<li><a href="" class="link-primary">Link Primary</a></li>
-			<li><a href="" class="link-secondary">Link Secondary</a></li>
+			<li><a href="" class="link">Link Primary</a></li>
+			<li><a href="" class="link is-grey">Link Secondary</a></li>
 		</ul>
 		<pre><code>&lt;a href=&quot;#&quot; class=&quot;link-primary&quot;&gt;Link Primary&lt;/a&gt;
 &lt;a href=&quot;#&quot; class=&quot;link-secondary&quot;&gt;Link Secondary&lt;/a&gt;</code></pre>
@@ -179,9 +225,9 @@
 			<p>Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and
 				engage in conversation with more and more people throughout their lives. And while most people will
 				spend their time constantly speaking, some never really learn to listen, which is the king of effective
-				<a href="#" class="link-primary">communication</a>. It may seem strange to hear such a thing as this,
+				<a href="#" class="link">communication</a>. It may seem strange to hear such a thing as this,
 				but it’s true. Even though it may not sound true to the individual who just spent the last couple
-				moments listening to some co-worker blather on about his <a href="#" class="link-secondary">fantasy
+				moments listening to some co-worker blather on about his <a href="#" class="link is-grey">fantasy
 					football</a> picks, but it is. Without proper listening, speech communication would just be a lot of
 				annoying sounds. Unfortunately, most of the time we spend listening, really is just the process of
 				physically absorbing the annoying squawks and squeaks that come out of someone. </p>
