--- a/urbanstory/src/css/sass/global/_global.scss
+++ b/urbanstory/src/css/sass/global/_global.scss
@@ -1,6 +1,6 @@
 //Default styles
 
-html {
+html, * {
   box-sizing: border-box;
 }
 *,
@@ -39,29 +39,16 @@ body {
   color: #fff;
 }
 
-button,
 input,
 optgroup,
 select,
 textarea {
   font-family: $font-stack;
 }
-.rounded {
-  @include radius;
+input[type=submit],
+button{
+	font-family: $font-heading;
 }
-.box-shadow {
-  @include box-shadow(0 8px 16px rgba(black, 0.05));
-}
-// ul {
-//   &:not(.browser-default) {
-//     padding-left: 0;
-//     list-style-type: none;
-
-//     & > li {
-//       list-style-type: none;
-//     }
-//   }
-// }
 
 a {
   color: $c-median-1;
@@ -79,69 +66,52 @@ h6 {
   font-weight: 600;
   line-height: 1.5rem;
   margin: 1rem 0 1rem 0;
-  &.gutter-reset {
+  font-family: $font-heading;
+  &.is-reset {
     margin: 0;
+    line-height: 1em;
   }
 }
 h1 {
   font-size: (36/16) + rem;
+  small{
+  	font-size: (32/16) + rem;
+  }
 }
 h2 {
   font-size: (32/16) + rem;
+  small{
+  	font-size: (24/16) + rem;
+  }
 }
 h3 {
   font-size: (24/16) + rem;
+  small{
+  	font-size: (18/16) + rem;
+  }
 }
 h4 {
-  font-size: (20/16) + rem;
+  font-size: (18/16) + rem;
+  small{
+  	font-size: (16/16) + rem;
+  }
 }
 h5 {
-  font-size: (18/16) + rem;
+  font-size: (16/16) + rem;
+  small{
+  	font-size: (14/16) + rem;
+  }
 }
 h6 {
-  font-size: (16/16) + rem;
-}
-// text formating
-.align-center {
-  text-align: center;
-}
-.align-left {
-  text-align: left;
-}
-.align-right {
-  text-align: right;
+  font-size: (14/16) + rem;
+  small{
+  	font-size: (11/16) + rem;
+  }
 }
 article {
   p {
     line-height: 1.5rem;
   }
-}
-.padd-s {
-  padding: $gutter-s;
-}
-.padd-s-vertical {
-  padding: $gutter-s 0;
-}
-.padd-s-horizontal {
-  padding: 0 $gutter-s;
-}
-.padd-m {
-  padding: $gutter-m;
-}
-.padd-m-vertical {
-  padding: $gutter-m 0;
-}
-.padd-m-horizontal {
-  padding: 0 $gutter-m;
-}
-.padd-l {
-  padding: $gutter-l;
-}
-.padd-l-vertical {
-  padding: $gutter-l 0;
-}
-.padd-m-horizontal {
-  padding: 0 $gutter-l;
 }
 
 figure {
@@ -153,16 +123,9 @@ img {
   max-width: 100%;
 }
 figcaption {
-  font-size: 12px;
+  font-size: $font-xs;
   color: $c-grey-5;
   font-style: italic;
-}
-.img-wrapper {
-  @extend .rounded;
-  @extend .box-shadow;
-}
-.transition {
-  @include transition(cubic-bezier(0.11, 0.65, 0.73, 0.66), 0.2s);
 }
 dl {
   dt {
