--- a/urbanstory/src/css/sass/composer/urbanstory.scss
+++ b/urbanstory/src/css/sass/composer/urbanstory.scss
@@ -1,7 +1,11 @@
 /* Styles for guideline layout only */
 
-@import "../components-global/variables";
-@import "../components-global/mixin";
+// global variables & mixins
+@import "../global/_variables";
+@import "../global/_mixin";
+
+//global class
+@import "../global/_global";
 
 .page-hero {
   padding: 2em 0;
