--- a/urbanstory/src/css/urbanstory.css
+++ b/urbanstory/src/css/urbanstory.css
@@ -1,4 +1,157 @@
 /* Styles for guideline layout only */
+html, * {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: "Source Sans Pro", Arial, sans-serif;
+  color: #212121;
+}
+
+::placeholder {
+  color: #c2c2c2;
+  opacity: 1;
+  /* Firefox */
+}
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #c2c2c2;
+}
+
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: #c2c2c2;
+}
+
+::selection {
+  background: #011148;
+  /* Safari */
+  color: #fff;
+}
+
+::-moz-selection {
+  background: #011148;
+  /* Firefox */
+  color: #fff;
+}
+
+input,
+optgroup,
+select,
+textarea {
+  font-family: "Source Sans Pro", Arial, sans-serif;
+}
+
+input[type=submit],
+button {
+  font-family: "Barlow", Arial, sans-serif;
+}
+
+a {
+  color: #2791d9;
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 600;
+  line-height: 1.5rem;
+  margin: 1rem 0 1rem 0;
+  font-family: "Barlow", Arial, sans-serif;
+}
+h1.is-reset,
+h2.is-reset,
+h3.is-reset,
+h4.is-reset,
+h5.is-reset,
+h6.is-reset {
+  margin: 0;
+  line-height: 1em;
+}
+
+h1 {
+  font-size: 2.25rem;
+}
+h1 small {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+h2 small {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+h3 small {
+  font-size: 1.125rem;
+}
+
+h4 {
+  font-size: 1.125rem;
+}
+h4 small {
+  font-size: 1rem;
+}
+
+h5 {
+  font-size: 1rem;
+}
+h5 small {
+  font-size: 0.875rem;
+}
+
+h6 {
+  font-size: 0.875rem;
+}
+h6 small {
+  font-size: 0.6875rem;
+}
+
+article p {
+  line-height: 1.5rem;
+}
+
+figure {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  max-width: 100%;
+}
+
+figcaption {
+  font-size: 12px;
+  color: #757575;
+  font-style: italic;
+}
+
+dl dt {
+  color: #212121;
+  padding: 4px 0;
+}
+dl dd {
+  color: #757575;
+  padding: 4px 0;
+}
+
 .page-hero {
   padding: 2em 0;
 }
