quick fix docs link

--- a/urbanstory/pages/components/button.html
+++ b/urbanstory/pages/components/button.html
@@ -218,8 +218,8 @@
 			<li><a href="" class="link">Link Primary</a></li>
 			<li><a href="" class="link is-grey">Link Secondary</a></li>
 		</ul>
-		<pre><code>&lt;a href=&quot;#&quot; class=&quot;link-primary&quot;&gt;Link Primary&lt;/a&gt;
-&lt;a href=&quot;#&quot; class=&quot;link-secondary&quot;&gt;Link Secondary&lt;/a&gt;</code></pre>
+		<pre><code>&lt;a href=&quot;&quot; class=&quot;link&quot;&gt;Link Primary&lt;/a&gt;
+&lt;a href=&quot;&quot; class=&quot;link is-grey&quot;&gt;Link Secondary&lt;/a&gt;</code></pre>
 		<h6>Sample Paragraph</h6>
 		<article>
 			<p>Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and
