--- a/urbanstory/src/css/sass/components-global/_ats-header.scss
+++ b/urbanstory/src/css/sass/components-global/_ats-header.scss
@@ -12,8 +12,8 @@
 
     .ats-logo{
         max-height: $ats-header-height;
-        margin-top:5px;
         width: 180px;
+        padding: 5px 5px 0 0;
     }
 }
 
@@ -66,7 +66,7 @@
                     left      : 0;
                     right     : 0;
                     bottom    : 0;
-                    margin    : 0 auto;
+                    margin    : auto;
                     opacity   : .5;
                 }
                 &:hover {
