--- a/urbanstory/src/css/sass/components-ats/_ats-header.scss
+++ b/urbanstory/src/css/sass/components-ats/_ats-header.scss
@@ -1,147 +1,133 @@
-
-.card-header{
-    background        : $c-white;
-    height            : $ats-header-height;
-    padding           : 0 $gutter-xl;
-    -ms-flex-align    : center;
-    -webkit-box-align : center;
-    align-items       : center;
-    @include box-shadow(0 0 0 1px rgba(0,0,0,0.1));
-
-    .ats-logo{
+.card-header {
+    background: $c-white;
+    height: $ats-header-height;
+    padding: 0 $gutter-xl;
+    -ms-flex-align: center;
+    -webkit-box-align: center;
+    align-items: center;
+    @include box-shadow(0 0 0 1px rgba(0, 0, 0, 0.1));
+    .ats-logo {
         max-height: $ats-header-height;
         width: 50%;
-        margin-top:5px;
+        margin-top: 5px;
     }
 }
 
-.flex{ 
+.flex {
     @include flexbox
 }
 
-.ats-nav-content{
-    display           : inline-flex;
-    width             : -webkit-fill-available;
-    justify-content   : space-between;
-    -ms-flex-align    : center;
-    -webkit-box-align : center;
-    align-items       : center;
-    height            : $ats-header-height;
-    margin-left       : -140px;
-
-    ul{
-        display           : flex;
-        justify-content   : flex-start;
-        padding           : 0;
-        margin            : 0;
-        -ms-flex-align    : center;
-        -webkit-box-align : center;
-        align-items       : center;
-        
-
-        li{
-            display        : inline-block;
-            padding        : 0;
-            font-size      : 0.875rem;
-            
-            
-            a { 
-                color      : $c-grey-5; 
-                cursor     : pointer;
-                position   : relative;
-                display    : inline-flex;
-                height     : $ats-header-height;
-                line-height:$ats-header-height;
-                padding    : 0 $gutter-l;
-            
+.ats-nav-content {
+    display: inline-flex;
+    width: -webkit-fill-available;
+    justify-content: space-between;
+    -ms-flex-align: center;
+    -webkit-box-align: center;
+    align-items: center;
+    height: $ats-header-height;
+    margin-left: -140px;
+    ul {
+        display: flex;
+        justify-content: flex-start;
+        padding: 0;
+        margin: 0;
+        -ms-flex-align: center;
+        -webkit-box-align: center;
+        align-items: center;
+        li {
+            display: inline-block;
+            padding: 0;
+            font-size: 0.875rem;
+            a {
+                color: $c-grey-5;
+                cursor: pointer;
+                position: relative;
+                display: inline-flex;
+                height: $ats-header-height;
+                line-height: $ats-header-height;
+                padding: 0 $gutter-l;
                 &:before {
                     transition: cubic-bezier(0.71, 0.14, 0.23, 1.01) 0.25s;
-                    content   : "";
+                    content: "";
                     background: $c-firm-1;
-                    width     : 0%;
-                    height    : 3px;
-                    display   : inline-block;
-                    position  : absolute;
-                    left      : 0;
-                    right     : 0;
-                    bottom    : 0;
-                    margin    : 0 auto;
-                    opacity   : .5;
+                    width: 0%;
+                    height: 3px;
+                    display: inline-block;
+                    position: absolute;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    margin: 0 auto;
+                    opacity: .5;
                 }
                 &:hover {
-                    cursor    : pointer;
-                    color     : $c-firm-1;
+                    cursor: pointer;
+                    color: $c-firm-1;
                     &:before {
-                        width : 100%;
+                        width: 100%;
                     }
                 }
                 &.active {
-                    color     : $c-firm-1;
+                    color: $c-firm-1;
                     &:before {
-                        width : 100%;
+                        width: 100%;
                         opacity: 1;
                     }
-                }  
+                }
             }
-
-            .icon-coin{ 
-                color         : $c-yellow-1 
+            .icon-coin {
+                color: $c-yellow-1
             }
-
-            span { 
-                margin        : 0px 5px;
-                display       : inline-block;
-                white-space   : nowrap; 
-                overflow      : hidden;
-                text-overflow : ellipsis; 
+            span {
+                margin: 0px 5px;
+                display: inline-block;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
-
-            .company-name{ 
-                width         : $ats-header-height * 3;
+            .company-name {
+                width: $ats-header-height * 3;
             }
-
-            .coin-amt{
-                width         : 35px
+            .coin-amt {
+                width: 35px
             }
-
-            &.has-icon{
-                padding       :0;
-                a{
-                    display   : inline-flex;
-                    height    : $ats-header-height;
-                    padding   : 0 $gutter-s;
-                    
+            &.has-icon {
+                padding: 0;
+                a {
+                    display: inline-flex;
+                    height: $ats-header-height;
+                    padding: 0 $gutter-s;
                     position: relative;
-                    i{
-                        margin-top    : 2px;
-                        display       : block;
-                        width         : 40px;
-                        height        : 100%;
-                        text-align    : center;
+                    i {
+                        margin-top: 2px;
+                        display: block;
+                        width: 40px;
+                        height: 100%;
+                        text-align: center;
                         vertical-align: middle;
                     }
-                    &::before{
-                        display       : none;
+                    &::before {
+                        display: none;
                     }
-                    &:after{
-                        content       : "";
-                        background    : rgba($c-firm-1, .05);
-                        width         : 40px;
-                        height        : 40px;
+                    &:after {
+                        content: "";
+                        background: rgba($c-firm-1, .05);
+                        width: 40px;
+                        height: 40px;
                         @include border-radius(20px);
-                        display       : block;
-                        position      : absolute;
-                        left          : 0;
-                        right         : 0;
-                        top           : 0;
-                        bottom        : 0;
-                        margin        : auto ;
-                        visibility    : hidden;
-                        opacity       : 0;
+                        display: block;
+                        position: absolute;
+                        left: 0;
+                        right: 0;
+                        top: 0;
+                        bottom: 0;
+                        margin: auto;
+                        visibility: hidden;
+                        opacity: 0;
                     }
-                    &:hover{
-                        &:after{
-                            visibility:visible;
+                    &:hover {
+                        &:after {
+                            visibility: visible;
                             opacity: 1;
                         }
                     }
@@ -153,102 +139,91 @@
                     }
                 }
             }
-
-            &.ats-company{
-                a{
-                    &:before{
+            &.ats-company {
+                a {
+                    &:before {
                         display: none;
                     }
                 }
             }
-
         }
-
-
     }
 }
-.menu-drawer{
-    height  : $ats-header-height;
-    width   : 30px ;
-    display : block;
+
+.menu-drawer {
+    height: $ats-header-height;
+    width: 30px;
+    display: block;
     position: relative;
-    cursor  : pointer;
-    &::before{
-        content : '';
-        display : block;
+    cursor: pointer;
+    &::before {
+        content: '';
+        display: block;
         position: absolute;
-        top     : 0;
-        bottom  : 0;
-        left    : 0;
-        right   : 0;
-        margin  : auto;
-        height  : 2px;
-        width   : 20px;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        height: 2px;
+        width: 20px;
         background: $c-firm-1;
         box-shadow: 0 -7px 0 $c-firm-1, 0 7px 0 $c-firm-1;
         @include radius;
     }
-    
-    &.active{
-        &::before{
+    &.active {
+        &::before {
             box-shadow: -5px -7px 0 #011148, 5px 7px 0 #011148;
         }
     }
 }
 
 // .menu-drawer.menu-drawer-active{
-    
 // }
-
-@media (max-width: $screen-lg + 2.5){
-
-    .card-header { 
-        padding : 0 10px 
+@media (max-width: $screen-lg + 2.5) {
+    .card-header {
+        padding: 0 10px
     }
-
-    .ats-nav-content{ 
+    .ats-nav-content {
         ul li {
             a {
                 padding: 0 $gutter-m - 3;
             }
-        }  
+        }
     }
-    
     .ats-nav-content ul li.has-icon a i {
         width: 40px;
     }
-    
-
-    li.menu-drawer{
+    li.menu-drawer {
         width: 30px;
     }
 }
 
-@media (max-width: $screen-md){
-    
-    .left-side { display: none }
-
-    .ats-nav-content{ justify-content: flex-end }
-    
-    .right-side ul li:nth-child(1) , .right-side ul li:nth-child(4) { display: none }
-    
+@media (max-width: $screen-md) {
+    .left-side {
+        display: none
+    }
+    .ats-nav-content {
+        justify-content: flex-end
+    }
+    .right-side ul li:nth-child(1),
+    .right-side ul li:nth-child(4) {
+        display: none
+    }
 }
 
-@media (max-width: $screen-s){
+@media (max-width: $screen-s) {
     .ats-nav-content ul li.has-icon a i {
         width: 30px;
     }
-
-    li.menu-drawer{
+    li.menu-drawer {
         width: 40px;
     }
 }
-
 
 li.has-children {
     color: $c-firm-1;
     position: relative;
-
     ul {
         width: 200px;
         position: absolute;
@@ -265,8 +240,12 @@ li.has-children {
             display: block;
             float: none;
             width: 100%;
-            &:hover { background: #f5f5f5 }
-            &:active { background: #f5f5f5;}
+            &:hover {
+                background: #f5f5f5
+            }
+            &:active {
+                background: #f5f5f5;
+            }
             a {
                 display: block;
                 line-height: 1em;
@@ -276,10 +255,10 @@ li.has-children {
                     display: none;
                 }
             }
-            
         }
     }
 }
+
 li.has-children.is-active {
     ul {
         display: block;
