--- a/urbanstory/src/css/sass/composer/urbanstory.scss
+++ b/urbanstory/src/css/sass/composer/urbanstory.scss
@@ -529,3 +529,19 @@ code {
 .urbanstory-font-xs{
   font-size: 11px;
 }
+
+.urbanstory-tooltip-style{
+  height: 150px;
+  padding: 10px;
+  display:block;
+  text-align: center;
+
+  button{
+    margin: 20px;    
+  }
+}
+
+.display-off{
+    display:none;
+}
+
