--- a/urbanstory/src/css/sass/composer/style.scss
+++ b/urbanstory/src/css/sass/composer/style.scss
@@ -30,6 +30,7 @@
 @import "../components-global/_chips";
 @import "../components-global/_slider";
 @import "../components-global/_preloader";
+@import "../components-global/_tooltip";
 
 // cards
 @import "../components-global/_img-showcase";
