--- a/urbanstory/src/css/sass/components-ats/_ats-header.scss
+++ b/urbanstory/src/css/sass/components-ats/_ats-header.scss
@@ -8,11 +8,15 @@
     align-items       : center;
     @include box-shadow(0 0 0 1px rgba(0,0,0,0.1));
 
+ 
     .ats-logo{
-        max-height: $ats-header-height;
-        width: 50%;
-        margin-top:5px;
+        width: 180px;
+        img{
+            max-height: $ats-header-height;
+            margin-top:5px;
+        }
     }
+    
 }
 
 .flex{ 
@@ -27,8 +31,7 @@
     -webkit-box-align : center;
     align-items       : center;
     height            : $ats-header-height;
-    margin-left       : -140px;
-
+    
     ul{
         display           : flex;
         justify-content   : flex-start;
