--- a/urbanstory/src/css/sass/composer/style.scss
+++ b/urbanstory/src/css/sass/composer/style.scss
@@ -11,6 +11,9 @@
 // global css
 @import "../global/_global";
 
+//pre code color highlight
+@import "../global/_prism";
+
 // main css
 @import "../components-global/_extends";
 @import "../components-global/_button";
