--- a/urbanstory/src/css/sass/composer/urbanstory.scss
+++ b/urbanstory/src/css/sass/composer/urbanstory.scss
@@ -7,6 +7,9 @@
 //global class
 @import "../global/_global";
 
+//pre code color highlight
+@import "../global/_prism";
+
 .page-hero {
   padding: 2em 0;
   & + section {
@@ -109,6 +112,7 @@
 }
 
 pre {
+  max-height: 500px;
   overflow-x: auto;
   padding: 1.25em 1.25em 1.25em 2em;
   border: 1px solid $c-grey-2;
@@ -133,6 +137,22 @@ pre {
     top: 10px;
     color: $c-grey-5;
     transform: rotate(-90deg);
+  }
+
+  button{
+    width: auto;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin : auto;
+    display: flex;
+    justify-content: center;
+
+    i{
+      position: relative;
+      margin: 3px 7px 0 0px;
+      
+    }
   }
 }
 code {
@@ -542,6 +562,6 @@ code {
 }
 
 .display-off{
-    display:none;
+  display:none;
 }
 
