--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -152,6 +152,145 @@ dl dd {
   padding: 4px 0;
 }
 
+/* PrismJS 1.16.0
+https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript+scss+sass */
+/**
+ * prism.js default theme for JavaScript, CSS and HTML
+ * Based on dabblet (http://dabblet.com)
+ * @author Lea Verou
+ */
+code[class*=language-],
+pre[class*=language-] {
+  color: black;
+  background: none;
+  text-shadow: 0 1px white;
+  font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+  font-size: 1em;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 1.5;
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
+}
+
+pre[class*=language-]::-moz-selection, pre[class*=language-] ::-moz-selection,
+code[class*=language-]::-moz-selection, code[class*=language-] ::-moz-selection {
+  text-shadow: none;
+  background: #b3d4fc;
+}
+
+pre[class*=language-]::selection, pre[class*=language-] ::selection,
+code[class*=language-]::selection, code[class*=language-] ::selection {
+  text-shadow: none;
+  background: #b3d4fc;
+}
+
+@media print {
+  code[class*=language-],
+pre[class*=language-] {
+    text-shadow: none;
+  }
+}
+/* Code blocks */
+pre[class*=language-] {
+  padding: 1em;
+  margin: 0.5em 0;
+  overflow: auto;
+}
+
+:not(pre) > code[class*=language-],
+pre[class*=language-] {
+  background: white;
+}
+
+/* Inline code */
+:not(pre) > code[class*=language-] {
+  padding: 0.1em;
+  border-radius: 0.3em;
+  white-space: normal;
+}
+
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: slategray;
+}
+
+.token.punctuation {
+  color: #999;
+}
+
+.namespace {
+  opacity: 0.7;
+}
+
+.token.property,
+.token.tag,
+.token.boolean,
+.token.number,
+.token.constant,
+.token.symbol,
+.token.deleted {
+  color: #905;
+}
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+  color: #690;
+}
+
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string {
+  color: #9a6e3a;
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.token.atrule,
+.token.attr-value,
+.token.keyword {
+  color: #07a;
+}
+
+.token.function,
+.token.class-name {
+  color: #DD4A68;
+}
+
+.token.regex,
+.token.important,
+.token.variable {
+  color: #e90;
+}
+
+.token.important,
+.token.bold {
+  font-weight: bold;
+}
+
+.token.italic {
+  font-style: italic;
+}
+
+.token.entity {
+  cursor: help;
+}
+
 .padd-s {
   padding: 4px;
 }
@@ -2490,7 +2629,7 @@ input[type=checkbox]:focus {
 .tooltip-left,
 .tooltip-bottom,
 .tooltip-top {
-  color: #33beef;
+  color: #fff;
 }
 
 /* Base styles for the entire tooltip */
@@ -2601,8 +2740,8 @@ input[type=checkbox]:focus {
 /* Left */
 .tooltip-left:before,
 .tooltip-left:after {
-  right: 90%;
-  bottom: 50%;
+  right: 100%;
+  bottom: 35%;
   left: auto;
 }
 
@@ -2652,8 +2791,8 @@ input[type=checkbox]:focus {
 /* Right */
 .tooltip-right:before,
 .tooltip-right:after {
-  bottom: 50%;
-  left: 90%;
+  bottom: 35%;
+  left: 100%;
 }
 
 .tooltip-right:before {
@@ -2673,17 +2812,11 @@ input[type=checkbox]:focus {
   transform: translateX(12px);
 }
 
-/* Move directional arrows down a bit for left/right tooltips */
-.tooltip-left:before,
-.tooltip-right:before {
-  top: 3px;
-}
-
 /* Vertically center tooltip content for left/right tooltips */
 .tooltip-left:after,
 .tooltip-right:after {
   margin-left: 0;
-  margin-bottom: -16px;
+  margin-bottom: -20px;
 }
 
 .uh-img-showcase img {
@@ -2708,8 +2841,10 @@ input[type=checkbox]:focus {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
 }
 .card-header .ats-logo {
+  width: 180px;
+}
+.card-header .ats-logo img {
   max-height: 50px;
-  width: 50%;
   margin-top: 5px;
 }
 
@@ -2734,7 +2869,6 @@ input[type=checkbox]:focus {
   -webkit-box-align: center;
   align-items: center;
   height: 50px;
-  margin-left: -140px;
 }
 .ats-nav-content ul {
   display: flex;
