--- a/urbanstory/src/css/sass/composer/style.scss
+++ b/urbanstory/src/css/sass/composer/style.scss
@@ -34,6 +34,7 @@
 @import "../components-global/_slider";
 @import "../components-global/_preloader";
 @import "../components-global/_tooltip";
+@import "../components-global/_steps";
 
 // cards
 @import "../components-global/_img-showcase";
