--- a/urbanstory/src/css/sass/global/_prism.scss
+++ b/urbanstory/src/css/sass/global/_prism.scss
@@ -11,7 +11,7 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javasc
      color: black;
      background: none;
      text-shadow: 0 1px white;
-     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+     //font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
      font-size: 1em;
      text-align: left;
      white-space: pre;
